# QA-OS

./: .env.example  .gitignore  AI-INTEGRATION-CHANGES-TEST-PLAN.md  QA-OS.code-workspace  README.md  config.py  push-to-github.sh  requirements.txt
platform/backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  test_ai_fix_diagnosis.py  test_executor_uiautomator.py  test_screen_capture_session.py  test_sprint1.py
platform/backend/alembic/: env.py
platform/backend/alembic/versions/: b6607df2f192_add_data_folders_data_sets_and_run_data_.py  f4ff3a41298b_initial_schema.py
platform/backend/app/: ai_rules.py  compose_detection.py  db.py  events.py  helpers.py  helpers_data_extraction.py  helpers_xml.py  main.py  models.py  schemas.py  settings.py  swiftui_detection.py
platform/backend/app/parser/: __init__.py  script_generator.py  script_parser.py  zip_importer.py
platform/backend/app/routers/: ai.py  artifacts.py  auth.py  batch_runs.py  builds.py  data.py  execution.py  imports.py  integrations.py  modules.py  projects.py  reports.py  runs.py  screens.py  tests.py
platform/backend/app/runner/: ai_fix_diagnosis.py  api_log_store.py  appium_service.py  artifacts.py  chucker_capture.py  debug_listener.py  engine.py  executor.py  logcat_capture.py  mitm_addon.py  proxy.py  pulse_capture.py  recording_android.py  recording_ios_sim.py  screen_capture_session.py  session.py  steps.py  tap_debugger.py  variables.py  (+1 more)
platform/backend/scripts/: reprocess_recording.py
platform/backend/tests/: conftest.py  test_health.py  test_models.py  test_xml_pipeline.py
(+80 files in other folders)
