 [project]
 name = "qa-os-backend"
 version = "0.1.0"
 description = "Local Appium execution platform backend (FastAPI)."
requires-python = ">=3.9"
 dependencies = [
   "fastapi>=0.115.0",
   "uvicorn[standard]>=0.32.0",
   "pydantic>=2.9.0",
   "python-dotenv>=1.0.0",
   "sqlalchemy>=2.0.30",
   "aiosqlite>=0.20.0",
   "python-multipart>=0.0.9",
   "aiofiles>=24.1.0",
   "appium-python-client>=4.0.0",
   "httpx>=0.27.0",
   "cryptography>=43.0.0",
 ]
 
 [tool.uvicorn]
 factory = false
